--- a/EcommerceProject/CartMaster.Master
+++ b/EcommerceProject/CartMaster.Master
@@ -40,9 +40,9 @@
     <!-- header section strats -->
     <header class="header_section">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
-        <a class="navbar-brand" href="LandingPage.aspx">
+        <a class="navbar-brand" href="CustomerLandingPage.aspx">
           <span>
-            ESHOP
+            E GIFT SHOP
           </span>
         </a>
         
@@ -53,13 +53,13 @@
               <a class="nav-link" href="CustomerLandingPage.aspx">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">
+              <a class="nav-link" href="CustomerOrdersPage.aspx">
                 Orders
               </a>
             </li>
             
             <li class="nav-item">
-              <a class="nav-link" href="">Receipts</a>
+              <a class="nav-link" href="CustomerFeedbackPage.aspx">Feedback</a>
             </li>
 
              
@@ -98,18 +98,12 @@
               ABOUT US
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
-            </p>
+              E GIFT SHOP is an e-commerce platform for sellers and buyers to trade gift items.   
+                             </p>
           </div>
           </div>
-          <div class="col-md-6 col-lg-3">
-            <h6>
-              NEED HELP
-            </h6>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
-            </p>
-          </div>
+         
+            
           <div class="col-md-6 col-lg-3">
             <h6>
               CONTACT US
